--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^2.6.9"
+    "mysql2": "^3.2.4",
+    "node-fetch": "^2.6.9",
+    "sequelize": "^6.31.0",
+    "sequelize-cli": "^6.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
