agregando detalles listUsers y creando migraciones

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "migrate": "npx sequelize-cli db:migrate"
+
   },
   "keywords": [],
   "author": "",
